--- a/views/add-question.ejs
+++ b/views/add-question.ejs
@@ -57,6 +57,7 @@
                 <button type="button" class="btn-math btn-default" onClick='input("\gamma")'>γ</button>
                 <!-- <button type="button" class="btn-math btn-default" onclick="input('\\log')">log</button> -->
                 <button type="button" class="btn-math btn-default" onclick="input('\\degree')">°</button>
+                <button type="button" class="btn-math btn-default" onclick="input('\\int')">∫</button>
                 <button type="button" class="btn-math btn-default" onclick="input('^')">^y</button>
                 <button type="button" class="btn-math btn-default" onclick="input('_')">_y</button>
             </div>
