--- a/views/add-question.ejs
+++ b/views/add-question.ejs
@@ -26,6 +26,7 @@
             <li><a class="hide" href="#">COURSE CENTER</a></li>
             <li><a href="/add-questions">ADD QUESTION</a></li>
             <li><a href="/about">ABOUT US</a></li>
+            <li><a href="/Database">DATABASE</a></li>
         </ul>
 
     </nav>
