--- a/views/about.ejs
+++ b/views/about.ejs
@@ -18,6 +18,7 @@
             <li><a class="hide" href="#">COURSE CENTER</a></li>
             <li><a href="/add-questions">ADD QUESTION</a></li>
             <li><a href="/about">ABOUT US</a></li>
+            <li><a href="/Database">DATABASE</a></li>
         </ul>
 
     </nav>
