--- a/views/database.ejs
+++ b/views/database.ejs
@@ -11,6 +11,11 @@
 <body>
 
         <style>
+          @import url('https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap');
+          *{
+            font-family: 'PT Serif', serif !important;
+            font-style: normal !important;
+          }
             body{
                 padding: 30px;
             }
