--- a/public/css/question-paper.css
+++ b/public/css/question-paper.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap');
 
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif !important;
+    font-family: 'PT Serif', serif !important;
     font-size: 10px !important;
     font-weight: 300;
     /* border: 1px solid green; */
