--- a/public/css/question-paper.css
+++ b/public/css/question-paper.css
@@ -484,5 +484,13 @@ hr{
     body{
         font-size: 10px !important;
         padding: 10px;
+        margin: 0;
+        justify-content: space-between;
+    }
+    .qs-top-part {
+        font-size: 10px;
+    }
+    .container{
+        height: 100%;
     }
 }
