--- a/public/css/question-paper.css
+++ b/public/css/question-paper.css
@@ -493,4 +493,9 @@ hr{
     .container{
         height: 100%;
     }
+    .bottom-sec{
+       position: absolute;
+       bottom: 0;
+    }
+    
 }
