--- a/public/css/question-paper.css
+++ b/public/css/question-paper.css
@@ -6,8 +6,7 @@
     margin: 0;
     padding: 0;
     
-    /* font-family: 'PT Serif', serif; */
-    font-family: 'TeX Gyre Pagella', serif;
+    font-family: 'PT Serif', serif;
     /* border: 1px solid green; */
 }
 
