--- a/views/database.ejs
+++ b/views/database.ejs
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   
-    <link rel="stylesheet" href="/css/nav-footer.css">
+    <!-- <link rel="stylesheet" href="/css/nav-footer.css"> -->
     <link rel="stylesheet" href="/css/database.css">
 
     <title>Document</title>
@@ -19,9 +19,9 @@
 <nav>
 
   <a href="/" class="logo">
-      <h1 class="hide-lg">lOGO</h1>
-      <i class=" hide-sm bi bi-house-door-fill"></i>
-  </a>
+    <h1 class="hide-lg">lOGO</h1>
+    <i class=" hide-sm bi bi-house-door-fill"></i>
+</a>
   <ul class="nav-links">
 
       <li><a class="hide-sm" href="/add-questions"><i class="bi bi-file-earmark-plus"></i></a></li>
